feat: startNpcName, endNpcName 추가